--- a/HTML and CSS/youtube.html
+++ b/HTML and CSS/youtube.html
@@ -94,12 +94,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-1.webp">
+            <a href=""><img class="trimmal" src="../img/trimmal/thumbnail-1.webp"></a>
             <div class="time">14:20</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-1.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-1.jpeg">
+                <div>
+                  <h4>Marques Brownlee</h4>
+                  <p>15M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
@@ -112,12 +119,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-2.webp">
+            <a href="https://youtu.be/mP0RAo9SKZk"><img class="trimmal" src="../img/trimmal/thumbnail-2.webp"></a>
             <div class="time">14:20</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-2.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-2.jpeg">
+                <div>
+                  <h4>Markipiler</h4>
+                  <p>35.2M Subscribers</p>
+                </div>
+              </div> 
             </div>
             <div class="channel-status">
               <p class="video-title">Try Not To Laugh Challenge #9!</p>
@@ -130,12 +144,20 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-3.webp">
+            <a href="https://youtu.be/FgjPQQeTh1w"><img class="trimmal" src="../img/trimmal/thumbnail-3.webp">
+            </a>
             <div class="time">05:34</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-3.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-3.jpeg">
+                <div>
+                  <h4>SSSniperWolf</h4>
+                  <p>33.8M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
@@ -148,12 +170,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-4.webp">
+            <a href="https://youtu.be/094y1Z2wpJg"><img class="trimmal" src="../img/trimmal/thumbnail-4.webp"></a>
             <div class="time">19:24</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-4.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-4.jpeg">
+                <div>
+                  <h4>Veritasium</h4>
+                  <p>13.9M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture!</p>
@@ -166,12 +195,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-5.webp">
+            <a href="https://youtu.be/86CQq3pKSUw"><img class="trimmal" src="../img/trimmal/thumbnail-5.webp"></a>
             <div class="time">11:50</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-5.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-5.jpeg">
+                <div>
+                  <h4>CS Dojo</h4>
+                  <p>6.91M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">Kadane's Algorithm to Maximum Sum Subarray Problem</p>
@@ -184,12 +220,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-6.webp">
+            <a href="https://youtu.be/yXWw0_UfSFg"><img class="trimmal" src="../img/trimmal/thumbnail-6.webp"></a>
             <div class="time">09:35</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-6.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-6.jpeg">
+                <div>
+                  <h4>MrBeast</h4>
+                  <p>10M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">Anything You Can Fit In The Circle I’ll Pay For</p>
@@ -202,12 +245,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-7.webp">
+            <a href="https://youtu.be/fNVa1qMbF9Y"><img class="trimmal" src="../img/trimmal/thumbnail-7.webp"></a>
             <div class="time">12:34</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-7.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-7.jpeg">
+                <div>
+                  <h4>RealLifeLore</h4>
+                  <p>7.66M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">Why Planes Don't Fly Over Tibet</p>
@@ -220,12 +270,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-8.webp">
+            <a href="https://youtu.be/lFm4EM1juls"><img class="trimmal" src="../img/trimmal/thumbnail-8.webp"></a>
             <div class="time">03:56</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-8.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-8.jpeg">
+                <div>
+                  <h4>Tech  Vision</h4>
+                  <p>7.9M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">Inside The World's Biggest Passenger Plane</p>
@@ -238,12 +295,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-9.webp">
+            <a href="https://youtu.be/ixmxOlcrlUc"><img class="trimmal" src="../img/trimmal/thumbnail-9.webp"></a>
             <div class="time">01:00</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-9.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-9.jpeg">
+                <div>
+                  <h4>ThenX</h4>
+                  <p>2M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">The SECRET to Super Human STRENGTH</p>
@@ -256,12 +320,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-10.webp">
+            <a href="https://youtu.be/R2vXbFp5C9o"><img class="trimmal" src="../img/trimmal/thumbnail-10.webp"></a>
             <div class="time">09:35</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-10.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-2.jpeg">
+                <div>
+                  <h4>Business Insider</h4>
+                  <p>7.5M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">How The World's Largest Cruise Ship Makes 30,000 Meals Every Day</p>
@@ -274,12 +345,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-11.webp">
+            <a href="https://youtu.be/u5_zuYWsypg"><img class="trimmal" src="../img/trimmal/thumbnail-11.webp"></a>
             <div class="time">12:34</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-11.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-11.jpeg">
+                <div>
+                  <h4>Dectination Tips</h4>
+                  <p>6.5M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">Dubai's Crazy Underwater Train and Other Things #Only in Dubai</p>
@@ -292,12 +370,19 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <img class="trimmal" src="../img/trimmal/thumbnail-12.webp">
+            <a href="https://youtu.be/9iMGFqMmUFs"><img class="trimmal" src="../img/trimmal/thumbnail-12.webp"></a>
             <div class="time">03:56</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
               <img class="profile" src="../img/Channel Profile/channel-12.jpeg">
+              <div class="preview-profile">
+                <img src="../img/Channel Profile/channel-12.jpeg">
+                <div>
+                  <h4>TED-Ed</h4>
+                  <p>5.5M Subscribers</p>
+                </div>
+              </div>
             </div>
             <div class="channel-status">
               <p class="video-title">What would happen if you didn’t drink water? - Mia Nacamulli</p>
