--- a/HTML and CSS/youtube.html
+++ b/HTML and CSS/youtube.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My youtube.com</title>
+    <title>Govindarajan.com</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
       <div class="right-section">
         <div class="right-text-div">
           <img class="right-icons" src="../img/Title bore/upload.svg">
-          <div class="tooltip">Creat</div>
+          <div class="tooltip">Create</div>
         </div>
         <div class="right-text-div">
           <img class="right-icons" src="../img/Title bore/youtube-apps.svg">
