--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Genarl.css">
-    <link rel="stylesheet" href="Title_Bore.css">
-    <link rel="stylesheet" href="Video_Preview.css">
-    <link rel="stylesheet" href="Side_Bore.css">
+    <link rel="stylesheet" href="HTML and CSS/Genarl.css">
+    <link rel="stylesheet" href="HTML and CSS/Title_Bore.css">
+    <link rel="stylesheet" href="HTML and CSS/Video_Preview.css">
+    <link rel="stylesheet" href="HTML and CSS/Side_Bore.css">
   </head>
 
   <body>
