--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 
       <!--Left bore section-->
       <div class="left-section">
-        <img class="hamburger-menu" src="/img/Title bore/hamburger-menu.svg">
-        <img class="youtube-loge" src="/img/Title bore/youtube-logo.svg">
+        <img class="hamburger-menu" src="./img/Title bore/hamburger-menu.svg">
+        <img class="youtube-loge" src="./img/Title bore/youtube-logo.svg">
       </div>
 
       <!--Center bore section-->
      <div class="center-section">
         <input name="Search_bore" class="Search-bore" type="text" placeholder="Search">
         <button class="search-icon-button">
-          <img class="search-icon" src="/img/Title bore/search.svg">
+          <img class="search-icon" src="./img/Title bore/search.svg">
           <div class="tooltip">Search</div>
         </button>
         <button class="voice-search-button">
-          <img class="voice-search-icon" src="/img/Title bore/voice-search-icon.svg">
+          <img class="voice-search-icon" src="./img/Title bore/voice-search-icon.svg">
           <div class="tooltip">Voice search</div>
         </button>
       </div>
@@ -38,22 +38,22 @@
       <!--Right bore section-->      
       <div class="right-section">
         <div class="right-text-div">
-          <img class="right-icons" src="/img/Title bore/upload.svg">
+          <img class="right-icons" src="./img/Title bore/upload.svg">
           <div class="tooltip">Create</div>
         </div>
         <div class="right-text-div">
-          <img class="right-icons" src="/img/Title bore/youtube-apps.svg">
+          <img class="right-icons" src="./img/Title bore/youtube-apps.svg">
           <div class="tooltip">Youtube apps</div>
         </div>
         <div class="notifications">
           <div class="right-text-div">
-            <img class="right-icons" src="/img/Title bore/notifications.svg">
+            <img class="right-icons" src="./img/Title bore/notifications.svg">
             <div class="number-of-notifications">5</div>
             <div class="tooltip">Notifications</div>
           </div>
         </div>
         <div class="right-text-div">
-          <img class="profile-user" src="/img/Title bore/user-profile.jpg">
+          <img class="profile-user" src="./img/Title bore/user-profile.jpg">
         </div>
       </div>
 
@@ -62,27 +62,27 @@
     <!--side bore-->
     <nav class="side-bore">
       <div class="side-bore-flex">
-        <img class="side-icon" src="/img/Side bore/home.svg">
+        <img class="side-icon" src="./img/Side bore/home.svg">
         <div>Home</div>
       </div>
       <div class="side-bore-flex">
-        <img class="side-icon" src="/img/Side bore/explore.svg">
+        <img class="side-icon" src="./img/Side bore/explore.svg">
         <div>Explores</div>
       </div>
       <div class="side-bore-flex">
-        <img class="side-icon" src="/img/Side bore/subscriptions.svg">
+        <img class="side-icon" src="./img/Side bore/subscriptions.svg">
         <div>Subscriptions</div>
       </div>
       <div class="side-bore-flex">
-        <img class="side-icon" src="/img/Side bore/originals.svg">
+        <img class="side-icon" src="./img/Side bore/originals.svg">
         <div>Originals</div>
       </div>
       <div class="side-bore-flex">
-        <img class="side-icon" src="/img/Side bore/youtube-music.svg">
+        <img class="side-icon" src="./img/Side bore/youtube-music.svg">
         <div>Music</div>
       </div>
       <div class="side-bore-flex">
-        <img class="side-icon" src="/img/Side bore/library.svg">
+        <img class="side-icon" src="./img/Side bore/library.svg">
         <div>Library</div>
       </div>
     </nav>
@@ -94,14 +94,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href=""><img class="trimmal" src="/img/trimmal/thumbnail-1.webp"></a>
+            <a href=""><img class="trimmal" src="./img/trimmal/thumbnail-1.webp"></a>
             <div class="time">14:20</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-1.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-1.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-1.jpeg">
+                <img src="./img/Channel Profile/channel-1.jpeg">
                 <div>
                   <h4>Marques Brownlee</h4>
                   <p>15M Subscribers</p>
@@ -119,14 +119,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/mP0RAo9SKZk"><img class="trimmal" src="/img/trimmal/thumbnail-2.webp"></a>
+            <a href="https://youtu.be/mP0RAo9SKZk"><img class="trimmal" src="./img/trimmal/thumbnail-2.webp"></a>
             <div class="time">14:20</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-2.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-2.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-2.jpeg">
+                <img src="./img/Channel Profile/channel-2.jpeg">
                 <div>
                   <h4>Markipiler</h4>
                   <p>35.2M Subscribers</p>
@@ -144,15 +144,15 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/FgjPQQeTh1w"><img class="trimmal" src="/img/trimmal/thumbnail-3.webp">
+            <a href="https://youtu.be/FgjPQQeTh1w"><img class="trimmal" src="./img/trimmal/thumbnail-3.webp">
             </a>
             <div class="time">05:34</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-3.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-3.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-3.jpeg">
+                <img src="./img/Channel Profile/channel-3.jpeg">
                 <div>
                   <h4>SSSniperWolf</h4>
                   <p>33.8M Subscribers</p>
@@ -170,14 +170,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/094y1Z2wpJg"><img class="trimmal" src="/img/trimmal/thumbnail-4.webp"></a>
+            <a href="https://youtu.be/094y1Z2wpJg"><img class="trimmal" src="./img/trimmal/thumbnail-4.webp"></a>
             <div class="time">19:24</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-4.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-4.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-4.jpeg">
+                <img src="./img/Channel Profile/channel-4.jpeg">
                 <div>
                   <h4>Veritasium</h4>
                   <p>13.9M Subscribers</p>
@@ -195,14 +195,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/86CQq3pKSUw"><img class="trimmal" src="/img/trimmal/thumbnail-5.webp"></a>
+            <a href="https://youtu.be/86CQq3pKSUw"><img class="trimmal" src="./img/trimmal/thumbnail-5.webp"></a>
             <div class="time">11:50</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-5.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-5.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-5.jpeg">
+                <img src="./img/Channel Profile/channel-5.jpeg">
                 <div>
                   <h4>CS Dojo</h4>
                   <p>6.91M Subscribers</p>
@@ -220,14 +220,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/yXWw0_UfSFg"><img class="trimmal" src="/img/trimmal/thumbnail-6.webp"></a>
+            <a href="https://youtu.be/yXWw0_UfSFg"><img class="trimmal" src="./img/trimmal/thumbnail-6.webp"></a>
             <div class="time">09:35</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-6.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-6.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-6.jpeg">
+                <img src="./img/Channel Profile/channel-6.jpeg">
                 <div>
                   <h4>MrBeast</h4>
                   <p>10M Subscribers</p>
@@ -245,14 +245,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/fNVa1qMbF9Y"><img class="trimmal" src="/img/trimmal/thumbnail-7.webp"></a>
+            <a href="https://youtu.be/fNVa1qMbF9Y"><img class="trimmal" src="./img/trimmal/thumbnail-7.webp"></a>
             <div class="time">12:34</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-7.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-7.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-7.jpeg">
+                <img src="./img/Channel Profile/channel-7.jpeg">
                 <div>
                   <h4>RealLifeLore</h4>
                   <p>7.66M Subscribers</p>
@@ -270,14 +270,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/lFm4EM1juls"><img class="trimmal" src="/img/trimmal/thumbnail-8.webp"></a>
+            <a href="https://youtu.be/lFm4EM1juls"><img class="trimmal" src="./img/trimmal/thumbnail-8.webp"></a>
             <div class="time">03:56</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-8.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-8.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-8.jpeg">
+                <img src="./img/Channel Profile/channel-8.jpeg">
                 <div>
                   <h4>Tech  Vision</h4>
                   <p>7.9M Subscribers</p>
@@ -295,14 +295,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/ixmxOlcrlUc"><img class="trimmal" src="/img/trimmal/thumbnail-9.webp"></a>
+            <a href="https://youtu.be/ixmxOlcrlUc"><img class="trimmal" src="./img/trimmal/thumbnail-9.webp"></a>
             <div class="time">01:00</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-9.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-9.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-9.jpeg">
+                <img src="./img/Channel Profile/channel-9.jpeg">
                 <div>
                   <h4>ThenX</h4>
                   <p>2M Subscribers</p>
@@ -320,14 +320,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/R2vXbFp5C9o"><img class="trimmal" src="/img/trimmal/thumbnail-10.webp"></a>
+            <a href="https://youtu.be/R2vXbFp5C9o"><img class="trimmal" src="./img/trimmal/thumbnail-10.webp"></a>
             <div class="time">09:35</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-10.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-10.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-2.jpeg">
+                <img src="./img/Channel Profile/channel-2.jpeg">
                 <div>
                   <h4>Business Insider</h4>
                   <p>7.5M Subscribers</p>
@@ -345,14 +345,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/u5_zuYWsypg"><img class="trimmal" src="/img/trimmal/thumbnail-11.webp"></a>
+            <a href="https://youtu.be/u5_zuYWsypg"><img class="trimmal" src="./img/trimmal/thumbnail-11.webp"></a>
             <div class="time">12:34</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-11.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-11.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-11.jpeg">
+                <img src="./img/Channel Profile/channel-11.jpeg">
                 <div>
                   <h4>Dectination Tips</h4>
                   <p>6.5M Subscribers</p>
@@ -370,14 +370,14 @@
 
         <div class="video-box">
           <div class="trimmal-box">
-            <a href="https://youtu.be/9iMGFqMmUFs"><img class="trimmal" src="/img/trimmal/thumbnail-12.webp"></a>
+            <a href="https://youtu.be/9iMGFqMmUFs"><img class="trimmal" src="./img/trimmal/thumbnail-12.webp"></a>
             <div class="time">03:56</div>
           </div>
           <div class="video-bottom-flex">
             <div class="channel-profile">
-              <img class="profile" src="/img/Channel Profile/channel-12.jpeg">
+              <img class="profile" src="./img/Channel Profile/channel-12.jpeg">
               <div class="preview-profile">
-                <img src="/img/Channel Profile/channel-12.jpeg">
+                <img src="./img/Channel Profile/channel-12.jpeg">
                 <div>
                   <h4>TED-Ed</h4>
                   <p>5.5M Subscribers</p>
