fuct : google test

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="HTML and CSS/Title_Bore.css">
     <link rel="stylesheet" href="HTML and CSS/Video_Preview.css">
     <link rel="stylesheet" href="HTML and CSS/Side_Bore.css">
+    <meta name="google-site-verification" content="Us25LMI2udfe5p0Cv27dMwJ0qljQTZxWJZO5EvU7VVQ" />
   </head>
 
   <body>
