CHA : css path change

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="./img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/./CSS2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/Genarl../CSS">
-    <link rel="stylesheet" href="./CSS/Title_Bore../CSS">
-    <link rel="stylesheet" href="./CSS/Video_Preview../CSS">
-    <link rel="stylesheet" href="./CSS/Side_Bore../CSS">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/Genarl.css">
+    <link rel="stylesheet" href="CSS/Title_Bore.css">
+    <link rel="stylesheet" href="CSS/Video_Preview.css">
+    <link rel="stylesheet" href="CSS/Side_Bore.css">
   </head>
 
   <body>
