Add js future in search and auto video cart generator

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="CSS/Title_Bore.css">
     <link rel="stylesheet" href="CSS/Video_Preview.css">
     <link rel="stylesheet" href="CSS/Side_Bore.css">
+    <script src="./index.js"></script>
   </head>
 
   <body>
